@@ -58,7 +58,6 @@ import com.sun.messaging.jmq.jmsserver.util.LoopbackAddressException;
 import com.sun.messaging.jmq.jmsserver.util.VerifyAddressException;
 import com.sun.messaging.jmq.jmsserver.core.BrokerAddress;
 import com.sun.messaging.jmq.jmsserver.core.BrokerMQAddress;
-import com.sun.messaging.jmq.jmsserver.persist.Store;
 
 
 /**
@@ -186,13 +185,6 @@ public class BrokerAddressImpl extends BrokerAddress {
     }
 
     public String getBrokerID() {
-        if (Globals.getBDBREPEnabled()) {
-            try {
-                return Store.makeReplicationNodeName(instName, storeSessionUID);
-            } catch (Exception e) {
-                return null;
-            }
-        }
         return brokerID;
     }
 
@@ -219,9 +211,8 @@ public class BrokerAddressImpl extends BrokerAddress {
     }
 
     public boolean equals(Object obj) {
-        if (obj == null || !(obj instanceof BrokerAddressImpl)) {
+        if (! (obj instanceof BrokerAddressImpl))
             return false;
-        }
 
         BrokerAddressImpl addr = (BrokerAddressImpl) obj;
 
@@ -288,9 +279,9 @@ public class BrokerAddressImpl extends BrokerAddress {
         buf.append("&");
         buf.append("brokerSessionUID=");
         buf.append(getBrokerSessionUID());
-        buf.append("&");
-        buf.append("ha="+getHAEnabled());
-        if (getStoreSessionUID() != null) {
+        if (getHAEnabled()) {
+            buf.append("&");
+            buf.append("ha=true");
             buf.append("&");
             buf.append("storeSessionUID=");
             buf.append(getStoreSessionUID());
@@ -301,14 +292,13 @@ public class BrokerAddressImpl extends BrokerAddress {
     public BrokerAddress fromProtocolString(String s) throws Exception {
         BrokerMQAddress a = BrokerMQAddress.createAddress(s);
         String ha = (String)a.getProperty("ha");
-        boolean isha = Boolean.valueOf(ha);
         return new BrokerAddressImpl(a.getHostName(), 
                      a.getProperty("instName"),
                      a.getPort(),
-                     isha,
+					 !(ha == null),
                      a.getProperty("brokerID"),
                      new UID(Long.valueOf(a.getProperty("brokerSessionUID")).longValue()),
-                     (a.getProperty("storeSessionUID") == null ? null:
+                     ((ha == null) ? null:
                       new UID(Long.valueOf(a.getProperty("storeSessionUID")).longValue())));
     }
 
@@ -319,11 +309,11 @@ public class BrokerAddressImpl extends BrokerAddress {
     public void writeBrokerAddress(GPacket gp) {
         gp.putProp("HA", Boolean.valueOf(getHAEnabled()));
         if (brokerID != null) gp.putProp("brokerID", getBrokerID());
-        if (brokerSessionUID != null) gp.putProp("brokerSession", Long.valueOf(getBrokerSessionUID().longValue()));
-        if (storeSessionUID != null) gp.putProp("storeSession", Long.valueOf(getStoreSessionUID().longValue()));
+        if (brokerSessionUID != null) gp.putProp("brokerSession", new Long(getBrokerSessionUID().longValue()));
+        if (storeSessionUID != null) gp.putProp("storeSession", new Long(getStoreSessionUID().longValue()));
         gp.putProp("instanceName", getInstanceName());
         gp.putProp("host", getHostName());
-        gp.putProp("port", Integer.valueOf(getPort()));
+        gp.putProp("port", new Integer(getPort()));
     }
 
     public static BrokerAddressImpl readBrokerAddress(GPacket gp) throws Exception {
